// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xstate-component-tree invoked child machines should be supported 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "one",
        "props": false,
      },
    ],
    "id": "(machine)",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "child",
        "props": false,
      },
    ],
    "id": "child",
  },
]
`;

exports[`xstate-component-tree invoked child machines should ignore non-statechart children (callback) 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "one",
        "props": false,
      },
    ],
    "id": "(machine)",
  },
]
`;

exports[`xstate-component-tree invoked child machines should ignore non-statechart children (promise) 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "one",
        "props": false,
      },
    ],
    "id": "(machine)",
  },
]
`;

exports[`xstate-component-tree invoked child machines should rebuild on nested invoked machine transitions 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -21,11 +21,11 @@
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
-         "component": "grandchild1",
+         "component": "grandchild2",
          "props": false,
        },
      ],
      "id": "grandchild",
    },
`;

exports[`xstate-component-tree invoked child machines should rebuild on transitions 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -11,11 +11,11 @@
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
-         "component": "child1",
+         "component": "child2",
          "props": false,
        },
      ],
      "id": "child",
    },
`;

exports[`xstate-component-tree invoked child machines should remove data once the invoke is halted 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -7,16 +7,6 @@
          "props": false,
        },
      ],
      "id": "(machine)",
    },
-   Object {
-     "children": Array [
-       Object {
-         "children": Array [],
-         "component": "child",
-         "props": false,
-       },
-     ],
-     "id": "child",
-   },
  ]
`;

exports[`xstate-component-tree invoked child machines should support nested invoked machines 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "one",
        "props": false,
      },
    ],
    "id": "(machine)",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "child",
        "props": false,
      },
    ],
    "id": "child",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "grandchild",
        "props": false,
      },
    ],
    "id": "grandchild",
  },
]
`;
